objects/House__c.object
<CustomObject>
    <description>Holds details Regarding House about Owner ,Where it is located and Everything related to a house.</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>It will Hold Address of House.</description>
        <inlineHelpText>To hold the address of house</inlineHelpText>
        <label>Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Address</description>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>House_owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>It will Hold same name Of Member ..It is a lookup field.</description>
        <inlineHelpText>Hold the owner</inlineHelpText>
        <label>House owner</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Houses</relationshipLabel>
        <relationshipName>Houses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inauguration_Date__c</fullName>
        <description>This field Holds The Date When a Person is coming in house.</description>
        <label>Inauguration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>This_Year_Balance__c</fullName>
        <description>Total  sum of Balance from all Member</description>
        <inlineHelpText>This field will hold the Sum of balance from all the members. Populated via trigger.</inlineHelpText>
        <label>This Year Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>This_year_Expense__c</fullName>
        <description>Sum Of Expenses From all the Member</description>
        <inlineHelpText>This field will hold the Sum of expenses from
all the members. Populated via trigger.</inlineHelpText>
        <label>This  year Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Balance__c</fullName>
        <label>Total_Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Members__c</fullName>
        <description>This field will hold the total number of members under this. Populated via trigger</description>
        <label>Total Members</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>House</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Houses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_InaugurationDate</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE(CreatedDate)&gt; Inauguration_Date__c</errorConditionFormula>
        <errorMessage>Inaguration date cannot be earlier than created date</errorMessage>
    </validationRules>
</CustomObject>